cabal-version:      3.0
name:               catnet
version:            0.0.0.1
synopsis:           Category Theory and Neural Networks
-- description:
homepage:           https://github.com/ih1d/catnet
license:            GPL-3.0-only
license-file:       LICENSE
author:             Isaac Lopez
maintainer:         isaac.lopez@upr.edu
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite catnet-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        catnet
